--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1,10 +1,10 @@
 {
   "extensionName": {
-    "message": "Twitch 實況通知器",
+    "message": "Twitch 實況通知器 | 聊天室翻譯",
     "description": "Extension name"
   },
   "extensionDescription": {
-    "message": "當選定的 Twitch 實況主開台時通知，並在彈出視窗中顯示實況資訊。",
+    "message": "當選定的 Twitch 實況主開台時通知，並在彈出視窗中顯示實況資訊。包含聊天室翻譯與多語言支援。",
     "description": "Extension description"
   },
   "extensionTitle": {
@@ -474,6 +474,31 @@
   "enableAutoFollowHint": {
     "message": "提示：若需自動抓取追蹤，請到設定頁面開啟「自動追蹤」",
     "description": "Hint after authorization to enable auto follow in settings"
+  }
+  ,
+  "chatTranslationSettings": {
+    "message": "聊天室翻譯設定",
+    "description": "Chat translation settings section title"
+  },
+  "chatEnableTranslation": {
+    "message": "啟用聊天室翻譯",
+    "description": "Enable chat translation label"
+  },
+  "chatTargetLanguage": {
+    "message": "聊天室目標語言",
+    "description": "Chat target language label"
+  },
+  "chatTranslationPrefix": {
+    "message": "聊天室翻譯前綴",
+    "description": "Chat translation prefix label"
+  },
+  "translationHelp": {
+    "message": "將實況標題與描述翻譯為你偏好的語言",
+    "description": "Translation help text"
+  },
+  "translationRefreshHint": {
+    "message": "變更翻譯設定後，請重新整理 Twitch 頁面以生效。",
+    "description": "Hint to refresh page after changing translation settings"
   }
   ,
   "accountCreatedAt": {
