--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -155,10 +155,6 @@
     "message": "라이브 알림을 받을 채널을 선택하세요 (자동 가져오기 모드에서만 유효)",
     "description": "Channel notification help text"
   },
-  "noChannels": {
-    "message": "채널 없음",
-    "description": "No channels message"
-  },
   "loadChannelsFailed": {
     "message": "채널 로딩 실패",
     "description": "Load channels failed message"
@@ -541,5 +537,9 @@
     "placeholders": {
       "days": { "content": "$1", "example": "120" }
     }
+  },
+  "useKDisplay": {
+    "message": "시청자 수를 K 형식으로 표시",
+    "description": "Use K format for viewer count checkbox"
   }
 }
